@@ -65,32 +65,32 @@
   ("ass" "assert_send([$${object}, :$${message}, $${args}])" "assert_send(...)")
   ("ast" "assert_throws(:$${expected}) { $. }" "assert_throws(...) { ... }")
   ("b" "=begin rdoc\n$>$.\n=end" "New Block")
-  ("begin" "begin\n$>$${paste}\nrescue $${Exception} => $${e}\n$>$.\nend\n" "begin ... rescue ... end")
-  ("bm" "TESTS = $${10_000}\nBenchmark.bmbm($${10}) do |results|\n  $.\nend" "Benchmark.bmbm(...) do ... end")
+  ("begin" "begin\n$>$${paste}\nrescue $${Exception} => $${e}\n$>$.\n$>end\n" "begin ... rescue ... end")
+  ("bm" "TESTS = $${10_000}\nBenchmark.bmbm($${10}) do |results|\n  $.\n$>end" "Benchmark.bmbm(...) do ... end")
   ("bt" "belongs_to :$${model}" "belongs_to")
-  ("case" "case $${object}\nwhen $${condition}\n$>$.\nend" "case ... end")
+  ("case" "case $${object}\nwhen $${condition}\n$>$.\n$>end" "case ... end")
   ("cl" "classify { |$${e}| $. }" "classify { |e| ... }")
-  ("cladl" "class $${ClassName} < DelegateClass($${ParentClass})\n$>def initialize$${1}\n$>$>super($${del_obj})\n$>$>\n$>$>$.\n$>end\n$>\n$>\nend" "class ... < DelegateClass ... initialize ... end")
-  ("clapr" "class $${ClassName} < $${ParentClass}\n$>def initialize$${1}\n$>$>$.\n$>end\n$>\n$>\nend" "class ... < ParentClass ... initialize ... end")
-  ("clast" "class $${ClassName} < Struct.new(:$${attr_names})\n$>def initialize(*args)\n$>$>super\n$>$>\n$>$>$.\n$>end\n$>\n$>\nend" "class ... < Struct ... initialize ... end")
-  ("class" "class $${ClassName}\n$>$.\nend" "class ... end")
-  ("classi" "class $${ClassName}\n$>def initialize$${1}\n$>$>$.\n$>end\n$>\n$>\nend" "class ... initialize ... end")
-  ("clasf" "class << $${self}\n$>$.\nend" "class << self ... end")
-  ("clabl" "class $${BlankSlate}\n$>instance_methods.each { |meth| undef_method(meth) unless meth =~ /\\A__/ }\n$>\n$>def initialize$${var}\n$>$>@$${delegate} = $${delegate_object}\n$>$>\n$>$>$.\n$>end\n$>\n$>def method_missing(meth, *args, &block)\n$>$>@$${delegate}.send(meth, *args, &block)\n$>end\n$>\n$>\nend" "class BlankSlate ... initialize ... end")
+  ("cladl" "class $${ClassName} < DelegateClass($${ParentClass})\n$>def initialize$${1}\n$>$>super($${del_obj})\n$>$>\n$>$>$.\n$>end\n$>\n$>\n$>end" "class ... < DelegateClass ... initialize ... end")
+  ("clapr" "class $${ClassName} < $${ParentClass}\n$>def initialize$${1}\n$>$>$.\n$>end\n$>\n$>\n$>end" "class ... < ParentClass ... initialize ... end")
+  ("clast" "class $${ClassName} < Struct.new(:$${attr_names})\n$>def initialize(*args)\n$>$>super\n$>$>\n$>$>$.\n$>end\n$>\n$>\n$>end" "class ... < Struct ... initialize ... end")
+  ("class" "class $${ClassName}\n$>$.\n$>end" "class ... end")
+  ("classi" "class $${ClassName}\n$>def initialize$${1}\n$>$>$.\n$>end\n$>\n$>\n$>end" "class ... initialize ... end")
+  ("clasf" "class << $${self}\n$>$.\n$>end" "class << self ... end")
+  ("clabl" "class $${BlankSlate}\n$>instance_methods.each { |meth| undef_method(meth) unless meth =~ /\\A__/ }\n$>\n$>def initialize$${var}\n$>$>@$${delegate} = $${delegate_object}\n$>$>\n$>$>$.\n$>end\n$>\n$>def method_missing(meth, *args, &block)\n$>$>@$${delegate}.send(meth, *args, &block)\n$>end\n$>\n$>\n$>end" "class BlankSlate ... initialize ... end")
   ("clafn" "split(\"::\").inject(Object) { |par, const| par.const_get(const) }" "class_from_name()")
   ("col" "collect { |$${e}| $. }" "collect { |e| ... }")
   ("collect" "collect { |$${element}| $${element}.$. }" "collect element")
-  ("comp" "include Comparable\n\ndef <=>(other)\n$>$.\nend" "include Comparable ...")
+  ("comp" "include Comparable\n\ndef <=>(other)\n$>$.\n$>end" "include Comparable ...")
   ("dee" "Marshal.load(Marshal.dump($${obj_to_copy}))" "deep_copy(...)")
   ("defd" "def_delegator :$${del_obj}, :$${del_meth}, :$${new_name}" "def_delegator ...")
   ("defds" "def_delegators :$${del_obj}, :$${del_methods}" "def_delegators ...")
-  ("defs" "def self.$${class_method_name}\n$>$.\nend" "def self ... end")
-  ("deft" "def test_$${case_name}\n$>$.\nend" "def test_ ... end")
+  ("defs" "def self.$${class_method_name}\n$>$.\n$>end" "def self ... end")
+  ("deft" "def test_$${case_name}\n$>$.\n$>end" "def test_ ... end")
   ("deli" "delete_if { |$${e}| $. }" "delete_if { |e| ... }")
   ("det" "detect { |$${e}| $. }" "detect { |e| ... }")
   ("dir" "Dir.glob($${glob}) { |$${file}| $. }" "Dir.glob(\"...\") { |file| ... }")
-  ("do" "do\n$>$.\nend" "do ... end")
-  ("doo" "do |$${object}|\n$>$.\nend" "Insert do |object| ... end")
+  ("do" "do\n$>$.\n$>end" "do ... end")
+  ("doo" "do |$${object}|\n$>$.\n$>end" "Insert do |object| ... end")
   ("dow" "downto($${0}) { |$${n}|$. }" "downto(0) { |n| ... }")
   ("ea" "each { |$${e}| $. }" "each { |e| ... }")
   ("eab" "each_byte { |$${byte}| $. }" "each_byte { |byte| ... }")
@@ -106,7 +106,7 @@
   ("eav" "each_value { |$${val}| $. }" "each_value { |val| ... }")
   ("eawi" "each_with_index { |$${e}, $${i}| $. }" "each_with_index { |e, i| ... }")
   ("elsif" "elsif $${condition}\n$>$." "elsif ...")
-  ("enum" "include Enumerable\n\ndef each(&block)\n$>$.\nend" "include Enumerable ...")
+  ("enum" "include Enumerable\n\ndef each(&block)\n$>$.\n$>end" "include Enumerable ...")
   ("fet" "fetch($${name}) { |$${key}|$. }" "fetch(name) { |key| ... }")
   ("fil" "fill($${range}) { |$${i}|$. }" "fill(range) { |i| ... }")
   ("file" "File.foreach($${file}) { |$${line}| $. }" "File.foreach (\"...\") { |line| ... }")
@@ -115,7 +115,7 @@
   ("fl" "flunk(\"$${message}\")" "flunk(...)")
   ("flao" "inject(Array.new) { |$${arr}, $${a}| $${arr}.push(*$${a}) }" "flatten_once()")
   ("flash" "flash[:$${notice}] = \"$${Successfully}\"$." "flash[...]")
-  ("forin" "for $${element} in $${collection}\n$>$${element}.$.\nend" "for ... in ... end")
+  ("forin" "for $${element} in $${collection}\n$>$${element}.$.\n$>end" "for ... in ... end")
   ("forw" "extend Forwardable" "extend Forwardable")
   ("gre" "grep($${pattern}) { |$${match}| $. }" "grep(/pattern/) { |match| ... }")
   ("gsu" "gsub(/$${pattern}/) { |$${match}|$. }" "gsub(/.../) { |match| ... }")
@@ -123,8 +123,8 @@
   ("hash" "Hash.new { |$${hash}, $${key}| $${hash}[$${key}] = $. }" "Hash.new { |hash, key| hash[key] = ... }")
   ("hm" "has_many :$${objects}" "has_many")
   ("ho" "has_one :$${object}" "has_one")
-  ("if" "if $${condition}\n$>$.\nend" "if ... end")
-  ("ife" "if $${condition}\n$>$${2}\nelse\n$>$${3}\nend" "if ... else ... end")
+  ("if" "if $${condition}\n$>$.\n$>end" "if ... end")
+  ("ife" "if $${condition}\n$>$${2}\nelse\n$>$${3}\n$>end" "if ... else ... end")
   ("inj" "inject($${init}) { |$${mem}, $${var}| $. }" "inject(init) { |mem, var| ... }")
   ("inject" "inject($${object}) { |$${injection}, $${element}| $${4} }$." "inject object")
   ("lam" "lambda { |$${args}|$. }" "lambda { |args| ... }")
@@ -144,11 +144,11 @@
   ("md" "File.open($${dump}, \"w\") { |$${file}| Marshal.dump($${obj}, $${file}) }" "Marshal.dump(..., file)")
   ("min" "min { |a, b| $. }" "min { |a, b| ... }")
   ("ml" "File.open($${dump}) { |$${file}| Marshal.load($${file}) }" "Marshal.load(obj)")
-  ("mm" "def method_missing(meth, *args, &block)\n$>$.\nend" "def method_missing ... end")
-  ("modf" "module $${ModuleName}\n$>module ClassMethods\n$>$>$.\n$>end\n$>\n$>extend ClassMethods\n$>\n$>def self.included(receiver)\n$>$>receiver.extend(ClassMethods)\n$>end\n$>\n$>\nend" "module ... ClassMethods ... end")
-  ("mods" "module $${ModuleName}\n$>$.\nend" "module ... end")
-  ("modu" "module $${ModuleName}\n$>module_function\n$>\n$>$.\nend" "module ... module_function ... end")
-  ("mct" "create_table :$${table} do |t|\n    $.\nend" "create table")
+  ("mm" "def method_missing(meth, *args, &block)\n$>$.\n$>end" "def method_missing ... end")
+  ("modf" "module $${ModuleName}\n$>module ClassMethods\n$>$>$.\n$>end\n$>\n$>extend ClassMethods\n$>\n$>def self.included(receiver)\n$>$>receiver.extend(ClassMethods)\n$>end\n$>\n$>\n$>end" "module ... ClassMethods ... end")
+  ("mods" "module $${ModuleName}\n$>$.\n$>end" "module ... end")
+  ("modu" "module $${ModuleName}\n$>module_function\n$>\n$>$.\n$>end" "module ... module_function ... end")
+  ("mct" "create_table :$${table} do |t|\n    $.\n$>end" "create table")
   ("mdct" "drop_table :$${table}\ncreate_table :$${table}" "drop / create Table")
   ("mdt" "drop_table :$${table}\n$." "drop table")
   ("mrt" "rename_table :$${table}, :$${new_name}$." "rename table")
@@ -203,12 +203,12 @@
   ("sorb" "sort_by { |$${e}| $. }" "sort_by { |e| ... }")
   ("ste" "step($${2}) { |$${n}|$. }" "step(2) { |e| ... }")
   ("sub" "sub(/$${pattern}/) { |$${match}|$. }" "sub(/.../) { |match| ... }")
-  ("tc" "require \"test/unit\"\n\nrequire \"$${library_file_name}\"\n\nclass Test$${amp} < Test::Unit::TestCase\n$>def test_$${case_name}\n$>$>$.\n$>end\nend" "class ... < Test::Unit::TestCase ... end")
+  ("tc" "require \"test/unit\"\n\nrequire \"$${library_file_name}\"\n\nclass Test$${amp} < Test::Unit::TestCase\n$>def test_$${case_name}\n$>$>$.\n$>end\n$>end" "class ... < Test::Unit::TestCase ... end")
   ("tim" "times { |$${n}|$. }" "times { |n| ... }")
   ("tra" "transaction$${1} { $. }" "transaction( ... ) { ... }")
   ("ts" "require \"test/unit\"\n\nrequire \"tc_$${test_case_file}\"\nrequire \"tc_$${test_case_file}\"\n" "require \"tc_...\" ...")
-  ("unless" "unless $${condition}\n$>$.\nend" "unless ... end")
-  ("until" "until $${condition}\n$>$.\nend" "until ... end")
+  ("unless" "unless $${condition}\n$>$.\n$>end" "unless ... end")
+  ("until" "until $${condition}\n$>$.\n$>end" "until ... end")
   ("upt" "upto($${0}) { |$${n}|$. }" "upto(1.0/0.0) { |n| ... }")
   ("va" "validates_associated :$${attribute}" "validates_associated")
   ("vc" "validates_confirmation_of :$${attribute}" "validates_confirmation_of")
@@ -222,7 +222,7 @@
   ("vuif" "validates_uniqueness_of :$${attribute}, :if => proc { |obj| $${condition} }" "validates_uniqueness_of if")
   ("w" "attr_writer :$${attr_names}" "attr_writer ...")
   ("when" "when $${condition}\n$>$." "when ...")
-  ("while" "while $${condition}\n$>$.\nend" "while ... end")
+  ("while" "while $${condition}\n$>$.\n$>end" "while ... end")
   ("y" " :yields: $${arguments}" ":yields:")
   ("yd" "File.open($${yaml}, \"w\") { |$${file}| YAML.dump($${obj}, $${file}) }" "YAML.dump(..., file)")
   ("yl" "File.open($${yaml}) { |$${file}| YAML.load($${file}) }" "YAML.load(file)")
@@ -607,22 +607,30 @@
 
   ([rails scr tests] (cons "Tests" (make-sparse-keymap "Tests")))
 
-  ([rails scr tests tests] '("All" . rails-rake-tests))
-  ([rails scr tests integration] '("Integration tests" . rails-rake-integration-tests))
-  ([rails scr tests functional] '("Functional tests" . rails-rake-functional-tests))
-  ([rails scr tests unit] '("Unit tests" . rails-rake-unit-tests))
-  ([rails scr tests recent] '("Recent tests" . rails-rake-recent-tests))
+  ([rails scr tests integration] '("Integration tests" . (lambda() (rails-rake-tests "integration"))))
+  ([rails scr tests unit] '("Unit tests" . (lambda() (rails-rake-tests "unit"))))
+  ([rails scr tests functional] '("Functional tests" . (lambda() (rails-rake-tests "functionals"))))
+  ([rails scr tests recent] '("Recent tests" . (lambda() (rails-rake-tests "recent"))))
+  ([rails scr tests tests] '("All" . (lambda() (rails-rake-tests "all"))))
+  ([rails scr tests separator] '("--"))
+  ([rails scr tests run] '("Run tests ..." . rails-rake-tests))
 
   ([rails scr gen] (cons "Generate" (make-sparse-keymap "Generate")))
+
+  ([rails scr gen plugin] '("Plugin" . rails-generate-plugin))
   ([rails scr gen migration] '("Migration" . rails-generate-migration))
   ([rails scr gen scaffold] '("Scaffold" . rails-generate-scaffold))
   ([rails scr gen model] '("Model" . rails-generate-model))
   ([rails scr gen controller] '("Controller" . rails-generate-controller))
+  ([rails scr gen separator] '("--"))
+  ([rails scr gen run] '("Run generate ..." . rails-generate))
 
   ([rails scr destr] (cons "Destroy" (make-sparse-keymap "Generators")))
   ([rails scr destr controller] '("Controller" . rails-destroy-controller))
   ([rails scr destr model] '("Model" . rails-destroy-model))
   ([rails scr destr scaffold] '("Scaffold" . rails-destroy-scaffold))
+  ([rails scr destr separator] '("--"))
+  ([rails scr destr run] '("Run destroy ..." . rails-destroy))
 
   ([rails webrick] (cons "WEBrick" (make-sparse-keymap "WEBrick")))
 
@@ -693,20 +701,15 @@
   ((kbd "C-c <down>") 'rails-lib:run-secondary-switch)
 
   ;; Scripts & SQL
-  ((kbd "\C-c \C-c s g c") 'rails-generate-controller)
-  ((kbd "\C-c \C-c s g m") 'rails-generate-model)
-  ((kbd "\C-c \C-c s g s") 'rails-generate-scaffold)
-  ((kbd "\C-c \C-c s g g") 'rails-generate-migration)
-  ((kbd "\C-c \C-c s d c") 'rails-destroy-controller)
-  ((kbd "\C-c \C-c s d m") 'rails-destroy-model)
-  ((kbd "\C-c \C-c s d s") 'rails-destroy-scaffold)
-  ((kbd "\C-c \C-c s c")   'rails-run-console)
-  ((kbd "\C-c \C-c s b")   'rails-run-breakpointer)
-  ((kbd "\C-c \C-c s s")   'rails-run-sql)
-  ((kbd "\C-c \C-c s r")   'rails-rake)
-  ((kbd "\C-c \C-c s w")   'rails-webrick:start)
-  ((kbd "\C-c \C-c w s")   'rails-webrick:start-default-env)
-  ((kbd "\C-c \C-c w p")   'rails-webrick:stop)
+  ((kbd "\C-c \C-c e")   'rails-generate)
+  ((kbd "\C-c \C-c d")   'rails-destroy)
+  ((kbd "\C-c \C-c s c") 'rails-run-console)
+  ((kbd "\C-c \C-c s b") 'rails-run-breakpointer)
+  ((kbd "\C-c \C-c s s") 'rails-run-sql)
+  ((kbd "\C-c \C-c r")   'rails-rake)
+  ((kbd "\C-c \C-c w s") 'rails-webrick:start)
+  ((kbd "\C-c \C-c w d") 'rails-webrick:start-default-env)
+  ((kbd "\C-c \C-c w p") 'rails-webrick:stop)
 
   ;; Rails finds
   ((kbd "\C-c \C-c f m") 'rails-find-models)
@@ -724,11 +727,7 @@
   ((kbd "\C-c \C-c f o") 'rails-find-config)
 
   ;; Tests
-  ((kbd "\C-c \C-c t a") 'rails-rake-tests)
-  ((kbd "\C-c \C-c t i") 'rails-rake-integration-tests)
-  ((kbd "\C-c \C-c t u") 'rails-rake-unit-tests)
-  ((kbd "\C-c \C-c t f") 'rails-rake-functional-tests)
-  ((kbd "\C-c \C-c t r") 'rails-rake-recent-tests)
+  ((kbd "\C-c \C-c t") 'rails-rake-tests)
 
   ;; Navigation
   ((kbd "<C-return>") 'rails-goto-file-on-current-line)
@@ -736,7 +735,7 @@
   ((kbd "<M-S-up>")   'rails-goto-file-from-file)
 
   ((kbd "\C-c \C-c l") 'rails-open-log)
-
+  ((kbd "\C-c \C-c j") 'rails-create-project)
   ;; Tags
   ((kbd "\C-c \C-c \C-t") 'rails-create-tags)
 
